--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@ body{
     display: none;
 }
 
+
+/* todo lo de la barra de navegacion tanto en desktop como en movile */
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -129,16 +132,17 @@ nav {
   }
 
 
-/*menu en mobile*/
+/*menu desplegable en mobile*/
 
 .mobile-menu {
     padding: 24px;
     position: absolute;
     top: 60px;
     background-color: var(--white);
-    width: 155px;
+    width: 100%;
     border-radius: 30px;
-    margin-top: 10px;
+    margin-top: 5px;
+    left: 0;
   }
 
   .mobile-menu a {
@@ -200,7 +204,7 @@ nav {
     bottom: 0;
 }
 
-/*Asaide de cuando le damos al boton de carrito de compras*/
+/*Aside de cuando le damos al boton de carrito de compras*/
 
 .product-detail {
     width: 360px;
@@ -280,6 +284,86 @@ nav {
     height: 50px;
   }
 
+/* aside de Detalles de un producto, cuando le damos click */
+
+.productdetail {
+  width: 360px;
+  padding-bottom: 24px;
+  position: absolute;
+  right: 0;
+  margin-top: 0px;
+  background-color: var(--white);
+}
+.product-close {
+  background: var(--white);
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  z-index: 2;
+  padding: 12px;
+  border-radius: 50%;
+}
+.product-close:hover {
+  cursor: pointer;
+}
+.productdetail > img:nth-child(2) {
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 20px 20px 20px 20px;
+}
+.productinfo {
+  margin: 24px 24px 0 24px;
+}
+.productinfo p:nth-child(1) {
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+.productinfo p:nth-child(2) {
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.productinfo p:nth-child(3) {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
+}
+.add-to-cart-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 640px) {
+  .productdetail {
+    width: 100%;
+  }
+}
+
+
+
+
+
+
+/* Product list - lista de productos */
+
   .cards-container{
     display: grid;
     grid-template-columns: repeat(auto-fill,240px);
@@ -330,6 +414,13 @@ nav {
     margin-bottom: 0;
     color: var(--very--light-pink);
 }
+
+
+
+
+
+
+
 
 @media (max-width: 640px) {
     .cards-container {
